--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,57 +1,79 @@
+# Workflow名称：部署到GitHub Pages
 name: Deploy to GitHub Pages
 
+# 触发条件：当代码推送到master分支时自动执行
 on:
   push:
     branches:
-      - main
+      - master  # 监听master分支的推送事件
 
-# 设置 GITHUB_TOKEN 的权限
+# 设置GITHUB_TOKEN的权限
+# 这些权限是GitHub Actions访问仓库和部署Pages所必需的
 permissions:
-  contents: read
-  pages: write
-  id-token: write
+  contents: read      # 读取仓库内容的权限
+  pages: write        # 写入GitHub Pages的权限
+  id-token: write     # 写入ID token的权限（用于部署验证）
 
-# 只允许一个并发部署
+# 并发控制：确保同一时间只有一个部署任务在运行
+# 如果有新的部署触发，会取消正在进行的部署
 concurrency:
-  group: "pages"
-  cancel-in-progress: true
+  group: "pages"                # 并发组名称
+  cancel-in-progress: true      # 取消正在进行的任务
 
+# 定义工作流程中的任务
 jobs:
+  # 构建任务：编译项目并生成静态文件
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest      # 使用最新版本的Ubuntu系统运行
 
     steps:
+      # 步骤1：检出代码
+      # 将仓库代码克隆到运行环境中
       - name: Checkout
         uses: actions/checkout@v4
 
+      # 步骤2：设置Node.js环境
+      # 安装指定版本的Node.js，并启用npm缓存加速后续安装
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: 'npm'
+          node-version: 20       # 使用Node.js 20版本
+          cache: 'npm'           # 缓存npm依赖，加快安装速度
 
+      # 步骤3：安装项目依赖
+      # npm ci 比 npm install 更适合CI环境，速度更快且更可靠
       - name: Install dependencies
         run: npm ci
 
+      # 步骤4：构建项目
+      # 执行package.json中定义的build脚本，生成dist目录
       - name: Build
         run: npm run build
 
+      # 步骤5：配置GitHub Pages
+      # 为部署做准备，配置Pages相关设置
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
+      # 步骤6：上传构建产物
+      # 将构建生成的dist目录打包上传，供后续部署使用
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './dist'
+          path: './dist'         # 指定要上传的目录路径
 
+  # 部署任务：将构建好的文件部署到GitHub Pages
+  # 这个任务依赖于build任务完成后才会执行
   deploy:
     environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
+      name: github-pages                              # 部署环境名称
+      url: ${{ steps.deployment.outputs.page_url }}  # 部署完成后的网站URL
+    runs-on: ubuntu-latest                            # 使用最新版本的Ubuntu系统运行
+    needs: build                                      # 依赖build任务，必须等build完成后才执行
 
     steps:
+      # 步骤1：部署到GitHub Pages
+      # 将之前上传的构建产物部署到GitHub Pages
       - name: Deploy to GitHub Pages
-        id: deployment
+        id: deployment                    # 设置步骤ID，用于获取输出变量
         uses: actions/deploy-pages@v4
